tests/ui/type/pattern_types/nested.stderr
error[E0308]: mismatched types
  --> $DIR/nested.rs:10:63
   |
LL | const BAD_NESTING: pattern_type!(pattern_type!(u32 is 1..) is 0..) = todo!();
   |                                                               ^ expected `(u32) is 1..`, found integer
   |
   = note: expected pattern type `(u32) is 1..`
                      found type `{integer}`

error[E0277]: `(u32) is 1..` is not a valid base type for range patterns
  --> $DIR/nested.rs:10:34
   |
LL | const BAD_NESTING: pattern_type!(pattern_type!(u32 is 1..) is 0..) = todo!();
   |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^ only integer types and `char` are supported
   |
   = help: the trait `core::pat::RangePattern` is not implemented for `(u32) is 1..`
   = help: the following other types implement trait `core::pat::RangePattern`:
             char
             i128
             i16
             i32
             i64
             i8
             isize
             u128
           and 5 others

error[E0277]: `(i32) is 1..` is not a valid base type for range patterns
  --> $DIR/nested.rs:15:35
   |
LL | const BAD_NESTING2: pattern_type!(pattern_type!(i32 is 1..) is ..=-1) = todo!();
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^ only integer types and `char` are supported
   |
   = help: the trait `core::pat::RangePattern` is not implemented for `(i32) is 1..`
   = help: the following other types implement trait `core::pat::RangePattern`:
             char
             i128
             i16
             i32
             i64
             i8
             isize
             u128
           and 5 others

error[E0600]: cannot apply unary operator `-` to type `(i32) is 1..`
  --> $DIR/nested.rs:15:67
   |
LL | const BAD_NESTING2: pattern_type!(pattern_type!(i32 is 1..) is ..=-1) = todo!();
   |                                                                   ^^ cannot apply unary operator `-`

error[E0277]: `(i32) is 1..` is not a valid base type for range patterns
  --> $DIR/nested.rs:19:35
   |
LL | const BAD_NESTING3: pattern_type!(pattern_type!(i32 is 1..) is ..0) = todo!();
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^ only integer types and `char` are supported
   |
   = help: the trait `core::pat::RangePattern` is not implemented for `(i32) is 1..`
   = help: the following other types implement trait `core::pat::RangePattern`:
             char
             i128
             i16
             i32
             i64
             i8
             isize
             u128
           and 5 others

error[E0308]: mismatched types
  --> $DIR/nested.rs:19:66
   |
LL | const BAD_NESTING3: pattern_type!(pattern_type!(i32 is 1..) is ..0) = todo!();
   |                                                                  ^
   |                                                                  |
   |                                                                  expected `(i32) is 1..`, found integer
   |                                                                  arguments to this function are incorrect
   |
   = note: expected pattern type `(i32) is 1..`
                      found type `{integer}`
help: the return type of this call is `{integer}` due to the type of the argument passed
  --> $DIR/nested.rs:19:66
   |
LL | const BAD_NESTING3: pattern_type!(pattern_type!(i32 is 1..) is ..0) = todo!();
   |                                                                  ^ this argument influences the return type of `RangeSub`
note: method defined here
  --> $SRC_DIR/core/src/pat.rs:LL:COL

error[E0277]: `(i32) is 1..` is not a valid base type for range patterns
  --> $DIR/nested.rs:19:66
   |
LL | const BAD_NESTING3: pattern_type!(pattern_type!(i32 is 1..) is ..0) = todo!();
   |                                                                  ^ only integer types and `char` are supported
   |
   = help: the trait `core::pat::RangePattern` is not implemented for `(i32) is 1..`
   = help: the following other types implement trait `core::pat::RangePattern`:
             char
             i128
             i16
             i32
             i64
             i8
             isize
             u128
           and 5 others

error[E0277]: `()` is not a valid base type for range patterns
  --> $DIR/nested.rs:24:35
   |
LL | const BAD_NESTING4: pattern_type!(() is ..0) = todo!();
   |                                   ^^ only integer types and `char` are supported
   |
   = help: the trait `core::pat::RangePattern` is not implemented for `()`
   = help: the following other types implement trait `core::pat::RangePattern`:
             char
             i128
             i16
             i32
             i64
             i8
             isize
             u128
           and 5 others

error[E0308]: mismatched types
  --> $DIR/nested.rs:24:43
   |
LL | const BAD_NESTING4: pattern_type!(() is ..0) = todo!();
   |                                           ^
   |                                           |
   |                                           expected `()`, found integer
   |                                           arguments to this function are incorrect
   |
help: the return type of this call is `{integer}` due to the type of the argument passed
  --> $DIR/nested.rs:24:43
   |
LL | const BAD_NESTING4: pattern_type!(() is ..0) = todo!();
   |                                           ^ this argument influences the return type of `RangeSub`
note: method defined here
  --> $SRC_DIR/core/src/pat.rs:LL:COL

error[E0277]: `()` is not a valid base type for range patterns
  --> $DIR/nested.rs:24:43
   |
LL | const BAD_NESTING4: pattern_type!(() is ..0) = todo!();
   |                                           ^ only integer types and `char` are supported
   |
   = help: the trait `core::pat::RangePattern` is not implemented for `()`
   = help: the following other types implement trait `core::pat::RangePattern`:
             char
             i128
             i16
             i32
             i64
             i8
             isize
             u128
           and 5 others

error[E0277]: `f32` is not a valid base type for range patterns
  --> $DIR/nested.rs:29:49
   |
LL | const BAD_NESTING5: pattern_type!(f32 is 1.0 .. 2.0) = todo!();
   |                                                 ^^^ only integer types and `char` are supported
   |
   = help: the trait `core::pat::RangePattern` is not implemented for `f32`
   = help: the following other types implement trait `core::pat::RangePattern`:
             i128
             i16
             i32
             i64
             i8
             isize
             u128
             u16
           and 4 others

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0277, E0308, E0600.
For more information about an error, try `rustc --explain E0277`.
